<resources>
    <string name="app_name">Recenzo</string>
    <string name="recenzo">RECENZO</string>
    <string name="please_connect_to_the_internet">Please connect to the internet</string>
    <string name="products">Products</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="really">Really exit app?</string>
    <string name="delete">Delete</string>
    <string name="really_delete">Really delete</string>
    <string name="cancel">Cancel</string>
    <string name="barcode">Barcode</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="aplication_made_by_vanja_buturac">Made by Vanja Buturac</string>
    <string name="scan">Scan barcode</string>
    <string name="view_product">View product</string>
    <string name="reset_camera">Reset camera</string>
</resources>