<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuScan"
    android:id="@+id/fragments">

    <fragment
        android:id="@+id/menuScan"
        android:label="@string/scan"
        android:name="me.vanjavk.recenzo.ScanFragment"
        tools:layout="@layout/fragment_scan"/>

    <fragment
        android:id="@+id/menuItems"
        android:label="@string/products"
        android:name="me.vanjavk.recenzo.items.ProductsFragment"
        tools:layout="@layout/fragment_products"/>

    <fragment
        android:id="@+id/menuAbout"
        android:label="@string/about"
        android:name="me.vanjavk.recenzo.AboutFragment"
        tools:layout="@layout/fragment_about"/>

</navigation>