<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/AppTheme">

    <LinearLayout
        android:padding="@dimen/paddingItemPager"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivItem"
            tools:src="@drawable/flat_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivHeight" />

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopItemPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/barcode"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ivRead"
                tools:src="@drawable/red_flag"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvBarcode"
            tools:text="1234567891230"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/title"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTitle"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/description"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc." />


    </LinearLayout>

</ScrollView>